[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path="src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.13.3"
actix-web = "4.3.1"
tokio = {version = "1.26.0", features=["macros","rt-multi-thread"]}
serde = {version = "1.0.159", features=["derive"]}
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
uuid = { version = "1.3.0", features = ["v4"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] } 
tracing-subscriber = { version = "0.3.16", features = ["registry", "env-filter"] }  
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
once_cell = "1.17.1"
secrecy = { version = "0.8.0", features = ["serde"] }  
tracing-actix-web = "0.7.3"

[dev-dependencies]
reqwest = "0.11.16"