[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path="src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
config = "0.13.3"
actix-web = "4.3.1"
tokio = {version = "1.26.0", features=["macros","rt-multi-thread"]}
serde = {version = "1.0.159", features=["derive"]}
sqlx = { version = "0.6.3", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
uuid = { version = "1.3.0", features = ["v4"] }
chrono = { version = "0.4.24", default-features = false, features = ["clock"] }
tracing = { version = "0.1.37", features = ["log"] } 
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"] }  
tracing-bunyan-formatter = "0.3.6"
tracing-log = "0.1.3"
once_cell = "1.17.1"
secrecy = { version = "0.8.0", features = ["serde"] }  
tracing-actix-web = "0.7.4"
serde-aux = "4.1.2"
unicode-segmentation = "1.10.1"
validator = "0.16.0"
# We are not using fake >2.4 because it relies on rand 0.8
# which has been released recently and it is not yet used by
# quickcheck  (solved in its upcoming 1.0 release!)
fake = "~2.3"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
# We need the `json` flag to serialize/deserialize JSON payloads
reqwest = { version = "0.11.16", features = ["json", "rustls-tls", "cookies"] }  
rand = { version = "0.8.5", features=["std_rng"] }
thiserror = "1.0.40"
anyhow = "1.0.70"
base64 = "0.21.0"
argon2 = {version = "0.5.0" , features=["std"]}
urlencoding = "2.1.2"
htmlescape = "0.3.1"
hmac = {version = "0.12.1" , features=["std"]}
sha2 = "0.10.6"
hex = "0.4.3"
actix-web-flash-messages = { version = "0.4.2", features = ["cookies"] }
actix-session = { version = "0.7.2", features = ["redis-rs-tls-session"] }

[dev-dependencies]
claims = "0.7.1"
tokio = {version = "1.26.0", features=["rt", "macros"]}
wiremock = "0.5.18"
serde_json = "1.0.95"
linkify = "0.9.0"